--- a/src/styles/TitleBar.module.css
+++ b/src/styles/TitleBar.module.css
@@ -7,7 +7,7 @@
     #ffcc70 100%
   );
   opacity: 70%;
-  padding: 10px 0px;
+  padding: 0.75rem 0rem;
 }
 
 #title_text {
