--- a/src/styles/ToolBar.module.css
+++ b/src/styles/ToolBar.module.css
@@ -2,12 +2,12 @@
   width: 100%;
   background-color: #4158d0;
   opacity: 50%;
-  padding: 10px 0px;
+  padding: 0.48rem 0rem;
 }
 
 #title_text {
   margin: 0;
   color: #fff;
   text-align: center;
-  font-size: 1.25rem;
+  font-size: 0.8rem;
 }
