--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,13 +15,10 @@ body {
 body div#root {
   height: 100%;
   width: 100%;
-  /* min-height: 100vh; */
-  max-height: 100vh;
-  overflow-y: scroll;
   display: flex;
   flex-direction: column;
 }
 
-body footer {
+body > div#root > footer {
   margin-top: auto;
 }
